test/corpus/assembly/scan.txt
================================================================================
C++ Code Location Permutations
================================================================================

23:	74 12                                                 	je     37 <engine::world::World::operator+()+0x25> (File Offset: 0xa7)
23:	74 12                                                 	je     37 <foo+0x80>
23:	74 12                                                 	je     37 <foo::operator()>
23:	74 12                                                 	je     37 <foo::operator+>
23:	74 12                                                 	je     37 <foo::operator+()>
23:	74 12                                                 	je     37 <foo::operator+()+0x90>
23:	74 12                                                 	je     37 <foo+0x80> (File Offset: 0xa7)
23:	74 12                                                 	je     37 <foo::operator()> (File Offset: 0xa7)
23:	74 12                                                 	je     37 <foo::operator+> (File Offset: 0xa7)
23:	74 12                                                 	je     37 <foo::operator+()> (File Offset: 0xa7)
23:	74 12                                                 	je     37 <foo::operator+()+0x90> (File Offset: 0xa7)

--------------------------------------------------------------------------------

(source
  (source_location
    (address)
    (machine_code_bytes
      (byte)
      (byte))
    (instruction)
    (code_location
      (identifier)
      (hexadecimal))
    (file_offset
      (hexadecimal)))
  (source_location
    (address)
    (machine_code_bytes
      (byte)
      (byte))
    (instruction)
    (code_location
      (identifier)
      (hexadecimal)))
  (source_location
    (address)
    (machine_code_bytes
      (byte)
      (byte))
    (instruction)
    (code_location
      (identifier)))
  (source_location
    (address)
    (machine_code_bytes
      (byte)
      (byte))
    (instruction)
    (code_location
      (identifier)))
  (source_location
    (address)
    (machine_code_bytes
      (byte)
      (byte))
    (instruction)
    (code_location
      (identifier)))
  (source_location
    (address)
    (machine_code_bytes
      (byte)
      (byte))
    (instruction)
    (code_location
      (identifier)
      (hexadecimal)))
  (source_location
    (address)
    (machine_code_bytes
      (byte)
      (byte))
    (instruction)
    (code_location
      (identifier)
      (hexadecimal))
    (file_offset
      (hexadecimal)))
  (source_location
    (address)
    (machine_code_bytes
      (byte)
      (byte))
    (instruction)
    (code_location
      (identifier))
    (file_offset
      (hexadecimal)))
  (source_location
    (address)
    (machine_code_bytes
      (byte)
      (byte))
    (instruction)
    (code_location
      (identifier))
    (file_offset
      (hexadecimal)))
  (source_location
    (address)
    (machine_code_bytes
      (byte)
      (byte))
    (instruction)
    (code_location
      (identifier))
    (file_offset
      (hexadecimal)))
  (source_location
    (address)
    (machine_code_bytes
      (byte)
      (byte))
    (instruction)
    (code_location
      (identifier)
      (hexadecimal))
    (file_offset
      (hexadecimal))))
