test/corpus/cpp_examples.txt
================================================================================
Code Caller C++ Template
================================================================================

0x40056c <std::vector<Something>::get_foo(int, double)+1>     mov    %rsp,%rbp

--------------------------------------------------------------------------------

(source
  (source_location
    (address)
    (code_location
      (identifier)
      (integer))
    (instruction)))


================================================================================
Code Caller C++ operator>>
================================================================================

0x40056c <std::ostream::operator>>(SomeClass)+30>     mov    %rsp,%rbp

--------------------------------------------------------------------------------

(source
  (source_location
    (address)
    (code_location
      (identifier)
      (integer))
    (instruction)))


================================================================================
Code Caller C++ operator+
================================================================================

0x40056c <std::ostream::operator+(int)>     mov    %rsp,%rbp

--------------------------------------------------------------------------------

(source
  (source_location
    (address)
    (code_location
      (identifier))
    (instruction)))


================================================================================
Code Caller C++ operator+ + Offset
================================================================================

0x40056c <std::ostream::operator+(int)+10>     mov    %rsp,%rbp

--------------------------------------------------------------------------------

(source
  (source_location
    (address)
    (code_location
      (identifier)
      (integer))
    (instruction)))
