test/corpus/machine_bytes.txt
================================================================================
Bytes + Call 1
================================================================================

0x00000000004005cc	e8 7f fe ff ff         	callq  0x400450 <puts@plt>

--------------------------------------------------------------------------------

(source
  (source_location
    (address)
    (machine_code_bytes
      (byte)
      (byte)
      (byte)
      (byte)
      (byte))
    (instruction)))


================================================================================
Bytes + Call 2
================================================================================

0x00000000004005a5	c7 45 ec 10 27 00 00   	movl   $0x2710,-0x14(%rbp)

--------------------------------------------------------------------------------

(source
  (source_location
    (address)
    (machine_code_bytes
      (byte)
      (byte)
      (byte)
      (byte)
      (byte)
      (byte)
      (byte))
    (instruction)))


================================================================================
Byte-like Assembly Opcode
================================================================================

0x000000000040071b	80 00 3f                     	addb   $0x3f,(%rax)

--------------------------------------------------------------------------------

(source
  (source_location
    (address)
    (machine_code_bytes
      (byte)
      (byte)
      (byte))
    (instruction)))
