test/corpus/memory_column.txt
================================================================================
Unrepresentable Memory - Dot Permutations
================================================================================

0x00007FFFFFFFCF78: 13 D3 FF FF FF 7F 00 00  1E D3 FF FF FF 7F 00 00  ................
0x00007FFFFFFFCF88: 31 D3 FF FF FF 7F 00 00  42 D3 FF FF FF 7F 00 00  1.......B.......
0x00007FFFFFFFCF88: 31 D3 FF FF FF 7F 00 00  42 D3 FF FF FF 7F 00 00  1.......B......Z
0x00007FFFFFFFCF88: 31 D3 FF FF FF 7F 00 00  42 D3 FF FF FF 7F 00 00  ........B......Z
0x00007FFFFFFFCF88: 31 D3 FF FF FF 7F 00 00  42 D3 FF FF FF 7F 00 00  ...............Z
0x00007FFFFFFFCF88: 31 D3 FF FF FF 7F 00 00  42 D3 FF FF FF 7F 00 00  1..............Z

--------------------------------------------------------------------------------

(source
  (address)
  (machine_code_bytes
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte))
  (memory_dump)
  (address)
  (machine_code_bytes
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte))
  (memory_dump)
  (address)
  (machine_code_bytes
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte))
  (memory_dump)
  (address)
  (machine_code_bytes
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte))
  (memory_dump)
  (address)
  (machine_code_bytes
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte))
  (memory_dump)
  (address)
  (machine_code_bytes
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte))
  (memory_dump))


================================================================================
Unrepresentable Memory - Miscellaneous Special Characters
================================================================================

0x00007FFFFFFFD038: 3C DB FF FF FF 7F 00 00  5D DB FF FF FF 7F 00 00  <.!.%[.}]..>$.+.
0x00007FFFFFFFD038: 3C DB FF FF FF 7F 00 00  5D DB FF FF FF 7F 00 00  <.!.%[.}]...$.+.

--------------------------------------------------------------------------------

(source)


================================================================================
Unrepresentable Memory - Typical Source Line
================================================================================

0x00007FFFFFFFD2D8: B6 78 38 36 5F 36 34 00  00 00 00 00 00 00 00 00  .x86_64.........

--------------------------------------------------------------------------------

(source
  (address)
  (machine_code_bytes
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte))
  (memory_dump))


================================================================================
Unrepresentable Memory - File Path
================================================================================

0x00007FFFFFFFD2E8: 00 00 2F 68 6F 6D 65 2F  73 65 6C 65 63 61 6F 6F  ../home/selecaoo
0x00007FFFFFFFD2F8: 6E 65 2F 74 65 6D 70 2F  63 70 70 5F 64 61 70 5F  ne/temp/cpp_dap_
0x00007FFFFFFFD308: 74 65 73 74 2F 61 2E 6F  75 74 00 58 44 47 5F 56  test/a.out.XDG_V

--------------------------------------------------------------------------------

(source)


================================================================================
Unrepresentable Memory - Metadata
================================================================================

0x00007FFFFFFFD318: 54 4E 52 3D 33 00 53 53  48 5F 41 47 45 4E 54 5F  TNR=3.SSH_AGENT_
0x00007FFFFFFFD328: 50 49 44 3D 33 39 37 35  00 58 44 47 5F 53 45 53  PID=3975.XDG_SES
0x00007FFFFFFFD338: 53 49 4F 4E 5F 49 44 3D  31 00 54 45 52 4D 5F 50  SION_ID=1.TERM_P
0x00007FFFFFFFD348: 52 4F 47 52 41 4D 3D 74  6D 75 78 00 48 4F 53 54  ROGRAM=tmux.HOST
0x00007FFFFFFFD358: 4E 41 4D 45 3D 73 65 6C                           NAME=sel

--------------------------------------------------------------------------------

(source)


================================================================================
Unrepresentable Memory - Whitespace
================================================================================

0x00007FFFFFFFD318: 54 4E 52 3D 33 00 53 53  48 5F 41 47 45 4E 54 5F  ...... .........
0x00007FFFFFFFD318: 54 4E 52 3D 33 00 53 53  48 5F 41 47 45 4E 54 5F  ...........	....

--------------------------------------------------------------------------------

(source
  (address)
  (machine_code_bytes
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte))
  (memory_dump)
  (address)
  (machine_code_bytes
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte))
  (memory_dump))
