test/corpus/no_op.txt
================================================================================
No-op Line
================================================================================

0x400645                        nop

--------------------------------------------------------------------------------

(source
  (source_location
    (address)
    (instruction)))


================================================================================
No-opl Line
================================================================================

0x4005d8                        nopl   0x0(%rax,%rax,1)

--------------------------------------------------------------------------------

(source
  (source_location
    (address)
    (instruction)))
